--- a/src/Views/Reports.form
+++ b/src/Views/Reports.form
@@ -74,13 +74,24 @@
                 <constraints>
                   <grid row="1" column="1" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <model>
+                    <item value="Sales Vs Expenditures"/>
+                    <item value="Sales Per Genre"/>
+                    <item value="Sales Per Author"/>
+                  </model>
+                </properties>
               </component>
               <component id="966b1" class="javax.swing.JComboBox" binding="sortByBox">
                 <constraints>
                   <grid row="1" column="4" row-span="1" col-span="1" vsize-policy="0" hsize-policy="2" anchor="8" fill="1" indent="0" use-parent-layout="false"/>
                 </constraints>
-                <properties/>
+                <properties>
+                  <model>
+                    <item value="High to Low"/>
+                    <item value="Low to High"/>
+                  </model>
+                </properties>
               </component>
               <component id="12ba" class="javax.swing.JLabel">
                 <constraints>
